Prevent page jumping

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@ html {
     font-size: 62.5%;
     font-weight: 300;
     line-height: 1.42857143;
+    overflow-y: scroll;
     text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
 }
 
